[project]
name = "EZRCV"
version = "1.0.0"
description = "A ranked choice voting web app built with Flask."
dependencies = [
    "flask",
    "mysqlclient",
    "Flask-SQLAlchemy",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]